Subreddits autocomplete in "Custom Location"
Ability to disable inbox replies when submitting posts
Ability to share image directly rather than link (thanks to Sérgio Sampaio)
Fix for saving images with no file extension (thanks to Luís Coelho)
Hungarian translation (thanks to András Lengyel-Nagy)
Various codebase improvements (thanks to Daniel Martí)

76/1.9.6.1
Removed all CAPTCHAs as they are no longer needed
Updated Spanish translation (thanks to Andrés Hernández)
Added Romanian translation (thanks to Badita Viorel-Octavian)

75/1.9.6
Multireddit viewing support
Auto-refresh old post lists (with preference)
Parent text shown (and copyable) when replying to comments
Ability to view custom user pages
Preference to hide Android status bar
Preference to use un-shortened link for "Share Comments" (thanks to fhtagn)
Preference for cache storage location (thanks to ShadowNinja)
Preference to set pinned subreddit sort order (thanks to chippen)
Preference to hide floating toolbar over images
Preference to make link text non-clickable
Preference to disable swipe-down-to-refresh
Preference to show blocked subreddits in the main menu (thanks to gstraube)
For albums with only one image, the image is now shown immediately
When sending PMs, input fields are cleared if send succeeded
Show action bar back button in two-pane mode (thanks to mariokmk)
Fixed bug with huge "load more comments" links
Support for imgflip and makeameme links
Added Dutch translation (thanks to Beleg-Cuthalion)

74/1.9.5.2
Fixed crash due to reddit thumbnail API change

73/1.9.5.1
Comment swipe actions
Ability to search comments (thanks to cpalasanu)
Ability to send and reply to private messages
Pull-down-to-refresh for posts/comments
Ability to set default post sort
Music is no longer paused when GIFs play (thanks to noughtmare and ccrama)
Fixed saving images with slashes in the path (thanks to 0xKD)
Action bar back button extended to allow clicking on text
Ability to copy comment URL