@@ -9,6 +9,7 @@ Ability to share image directly rather than link (thanks to Sérgio Sampaio)
 Fix for saving images with no file extension (thanks to Luís Coelho)
 Hungarian translation (thanks to András Lengyel-Nagy)
 Various codebase improvements (thanks to Daniel Martí)
+Removed unnecessary image download when opening in external browser (thanks to m3sv)
 
 76/1.9.6.1
 Removed all CAPTCHAs as they are no longer needed
